--- a/public/css/style.css
+++ b/public/css/style.css
@@ -89,7 +89,7 @@ ul.icon-menu li.icon-box.active, ul.icon-menu li.icon-box:hover,
 /*** NAVIGATION ***/
 .vertical-nav {
 	position: fixed;
-	right: 30px;
+	left: 30px;
 	bottom: 0;
 	z-index: 3;
 	display: flex;
@@ -99,6 +99,7 @@ ul.icon-menu li.icon-box.active, ul.icon-menu li.icon-box:hover,
 	opacity: 1;
 	transition: opacity 0.3s;
 	-webkit-transition: opacity 0.3s;
+	right: 0;
 }
 
 .vertical-nav.hide-header {
@@ -182,10 +183,10 @@ ul.icon-menu li.icon-box:hover i {
 
 .icon-box a:hover h2 {
 	opacity: 1;
-	right: 27px;
+	left: 27px;
 	margin: 0;
 	text-align: center;
-	border-radius: 30px 0 0 30px;
+	border-radius: 0 30px 30px 0;
 }
 
 ul.icon-menu li.icon-box {
