--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,7 +24,7 @@ a:hover {
 }
 
 *{
-	font-family: 'Open Sans', sans-serif;
+	font-family: "Open Sans", sans-serif;
 }
 
 img {
@@ -33,7 +33,7 @@ img {
 }
 
 h1 {
-	font-family: 'Poppins', sans-serif;
+	font-family: "Poppins", sans-serif;
 }
 
 footer {
@@ -89,7 +89,7 @@ ul.icon-menu li.icon-box.active, ul.icon-menu li.icon-box:hover,
 /*** NAVIGATION ***/
 .vertical-nav {
 	position: fixed;
-	left: 30px;
+	right: 30px;
 	bottom: 0;
 	z-index: 3;
 	display: flex;
@@ -99,7 +99,6 @@ ul.icon-menu li.icon-box.active, ul.icon-menu li.icon-box:hover,
 	opacity: 1;
 	transition: opacity 0.3s;
 	-webkit-transition: opacity 0.3s;
-	right: 0;
 }
 
 .vertical-nav.hide-header {
