--- a/public/css/style.css
+++ b/public/css/style.css
@@ -89,7 +89,7 @@ ul.icon-menu li.icon-box.active, ul.icon-menu li.icon-box:hover,
 /*** NAVIGATION ***/
 .vertical-nav {
 	position: fixed;
-	right: 30px;
+	left: 30px;
 	bottom: 0;
 	z-index: 3;
 	display: flex;
@@ -168,7 +168,7 @@ ul.icon-menu li.icon-box:hover i {
 	z-index: -1;
 	position: absolute;
 	top: 0;
-	right: 0;
+	left: 0;
 	opacity: 0;
 	color: #fff;
 	line-height: 50px;
