--- a/templates/search.html.twig
+++ b/templates/search.html.twig
@@ -1,23 +1,23 @@
 {% extends 'base.html.twig' %}
 
+{% set title = "Search" %}
+
 {% block css %}
-    {{ parent() }}
+	{{ parent() }}
 {% endblock %}
 
 {% block js %}
-    {{ parent() }}
+	{{ parent() }}
 {% endblock %}
 
 {% block body %}
-    <h1 class="text-center text-uppercase mt-3">Search</h1>
-    <hr />
-    <div class="row mt-3">
-        <div>
-            <form method="POST" action="{{ path('app_search_results') }}">
-                <label class="form-label" for="searchQuery">Enter a Search Query</label>
-                <input class="form-control mb-3" id="searchQuery" name="searchQuery" type="text" />
-                <input class="btn btn-primary mb-3" type="submit" value="Submit" />
-            </form>
-        </div>
-    </div>
+	<div class="row mt-3">
+		<div>
+			<form method="POST" action="{{ path('app_search_results') }}">
+				<label class="form-label" for="searchQuery">Enter a Search Query</label>
+				<input class="form-control mb-3" id="searchQuery" name="searchQuery" type="text" />
+				<input class="btn btn-primary mb-3" type="submit" value="Submit" />
+			</form>
+		</div>
+	</div>
 {% endblock %}
