--- a/templates/searchResults.html.twig
+++ b/templates/searchResults.html.twig
@@ -1,42 +1,43 @@
 {% extends 'base.html.twig' %}
 
 {% set firstEL = results|first %}
+{% set title = "Results" %}
 
 {% block css %}
-    {{ parent() }}
+	{{ parent() }}
 {% endblock %}
 
 {% block js %}
-    {{ parent() }}
-    <script>
-      $(function(){
-        const boxArtEl =  $('#boxArt');
-        const gameSelectionEl = $('#gameSelection');
-        gameSelectionEl.on('change', function() {
-          let url = gameSelectionEl.find(":selected").data('gameimgurl');
-          let name = gameSelectionEl.find(":selected").data('gamename');
-          console.log(url, name);
-          boxArtEl.attr("src", url);
-          boxArtEl.attr("alt", name);
-        });
+	{{ parent() }}
+	<script>
+    $(function(){
+      const boxArtEl =  $('#boxArt');
+      const gameSelectionEl = $('#gameSelection');
+      gameSelectionEl.on('change', function() {
+        let url = gameSelectionEl.find(":selected").data('gameimgurl');
+        let name = gameSelectionEl.find(":selected").data('gamename');
+        console.log(url, name);
+        boxArtEl.attr("src", url);
+        boxArtEl.attr("alt", name);
       });
-    </script>
+    });
+	</script>
 {% endblock %}
 
 {% block body %}
-    <div class="row mt-3">
-        <div class="col-md-6">
-            <form method="POST" action="{{ path('app_import_game_by_id') }}">
-                <select class="form-select mb-3" name="gameSelection" id="gameSelection">
-                    {% for result in results %}
-                        <option value="{{ result.boxId }}" data-gameimgurl="{{ result.imgSrc }}" data-gamename="{{ result.name }}">{{ result.name }} - {{ result.system }}</option>
-                    {% endfor %}
-                </select>
-                <input class="btn btn-primary mb-3" type="submit" value="Submit" />
-            </form>
-        </div>
-        <div class="col-md-6">
-            <img id="boxArt" src="{{ firstEL.imgSrc }}" alt="{{ firstEL.name }}" />
-        </div>
-    </div>
+	<div class="row mt-3">
+		<div class="col-md-6">
+			<form method="POST" action="{{ path('app_import_game_by_id') }}">
+				<select class="form-select mb-3" name="gameSelection" id="gameSelection">
+					{% for result in results %}
+						<option value="{{ result.boxId }}" data-gameimgurl="{{ result.imgSrc }}" data-gamename="{{ result.name }}">{{ result.name }} - {{ result.system }}</option>
+					{% endfor %}
+				</select>
+				<input class="btn btn-primary mb-3" type="submit" value="Submit" />
+			</form>
+		</div>
+		<div class="col-md-6">
+			<img id="boxArt" src="{{ firstEL.imgSrc }}" alt="{{ firstEL.name }}" />
+		</div>
+	</div>
 {% endblock %}
