--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -42,6 +42,12 @@
 						<h2>Search</h2>
 					</a>
 				</li>
+				<li class="icon-box">
+					<i class="fa fa-solid fa-gear"></i>
+					<a href="{{ path('app_settings') }}">
+						<h2>Settings</h2>
+					</a>
+				</li>
 			</ul>
 		</nav>
 
