--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,20 +4,25 @@
 		<meta charset="UTF-8">
 		<title>CEX Library | {{ title }}</title>
 		{% block css %}
-			<link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet" type="text/css" />
+			<link href="{{ asset('css/bootstrap-dark.min.css') }}" rel="stylesheet" type="text/css" />
 			<link href="{{ asset('css/style.css') }}" rel="stylesheet" type="text/css" />
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		{% endblock %}
 		{% block js %}
+			<script src="{{ asset('js/jquery-3.4.1.min.js') }}"></script>
+			<script src="{{ asset('js/jquery-ui.min.js') }}"></script>
 			<script src="{{ asset('js/bootstrap.bundle.min.js') }}"></script>
-			<script src="{{ asset('js/jquery-3.6.0.min.js') }}"></script>
 			<script src="{{ asset('js/sorttable.js') }}"></script>
 			<script src="{{ asset('js/global.js') }}"></script>
 		{% endblock %}
 	</head>
 	<body>
 		<h1>{{ title }}</h1>
-		<div class="container" id="body">
+		<div class="container-fluid" id="body">
+			<!--Success-->
+			<div class="alert alert-success notification">
+				<p class="m-0"><i class="fas fa-check-circle"></i> Updated.</p>
+			</div>
 			{% block body %}{% endblock %}
 		</div>
 
