--- a/templates/collection.html.twig
+++ b/templates/collection.html.twig
@@ -11,27 +11,29 @@
 {% endblock %}
 
 {% block body %}
-	<div class="row mt-3">
+	<div class="row mt-3 flex-column">
 		<div class="d-flex flex-wrap justify-content-around">
-			<p class="text-center text-white">Total Investment: {{ totalCurrentPrice|format_currency('GBP') }}</p>
+			<p class="text-center">Total Investment: {{ totalCurrentPrice|format_currency('GBP') }}</p>
 		</div>
-		<table id="sortable" class="table table-responsive table-striped table-dark sortable">
-			<thead>
-				<tr>
-					<th scope="col">Name</th>
-					<th scope="col" class="sorttable_numeric">Current Price</th>
-					<th scope="col">System</th>
-				</tr>
-			</thead>
-			<tbody>
-				{% for game in collection %}
+		<div class="container">
+			<table id="sortable" class="table table-striped table-dark sortable w-100">
+				<thead>
 					<tr>
-						<td>{{ game.name }}</td>
-						<td>{{ game.currentPrice|format_currency('GBP') }}</td>
-						<td>{{ game.system.name }}</td>
+						<th scope="col">Name</th>
+						<th scope="col" class="sorttable_numeric">Current Price</th>
+						<th scope="col">System</th>
 					</tr>
-				{% endfor %}
-			</tbody>
-		</table>
+				</thead>
+				<tbody>
+					{% for game in collection %}
+						<tr class="clickable" onclick="window.location = $(this).data('href');" data-href="{{ path('app_collection_single', {'id': game.id}) }}">
+							<td>{{ game.name }}</td>
+							<td>{{ game.currentPrice|format_currency('GBP') }}</td>
+							<td>{{ game.system.name }}</td>
+						</tr>
+					{% endfor %}
+				</tbody>
+			</table>
+		</div>
 	</div>
 {% endblock %}
