--- a/templates/dashboard.html.twig
+++ b/templates/dashboard.html.twig
@@ -11,9 +11,8 @@
 {% endblock %}
 
 {% block body %}
-	<h2>Recently Added</h2>
-	<div class="row mt-3">
-		<div class="d-flex flex-wrap justify-content-center">
+	<div class="mt-3">
+		<div class="d-flex flex-wrap justify-content-center w-100">
 			{% for game in newest %}
 				<div class="card mx-3 mb-3" style="width: 18rem;">
 					<div class="card-img-top">
@@ -31,7 +30,7 @@
 		<hr />
 		<div class="d-flex flex-wrap justify-content-around">
 			<div class="alert alert-success" style="width: 250px">
-				<span class="d-block">Total Investment <b>{{ totalCurrentPrice|format_currency('GBP') }}</b></span>
+				<span class="d-block">Total Investment: <b>{{ totalCurrentPrice|format_currency('GBP') }}</b></span>
 			</div>
 			<div class="alert alert-success" style="width: 250px">
 				<span class="d-block">Total Games: <b>{{ totalGames }}</b></span>
