--- a/templates/error.html.twig
+++ b/templates/error.html.twig
@@ -6,4 +6,4 @@
 
 {% block js %}{{ parent() }}{% endblock %}
 
-{% block body %}<p class="text-white mt-3">{{ errorMsg }}{% endblock %}
+{% block body %}<p class="mt-3">{{ errorMsg }}{% endblock %}
