--- a/templates/search.html.twig
+++ b/templates/search.html.twig
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block body %}
-	<div class="row mt-3">
+	<div class="container mt-3">
 		<div>
 			<form method="POST" action="{{ path('app_search_results') }}">
 				<label class="form-label" for="searchQuery">Enter a Search Query</label>
