--- a/templates/settings.html.twig
+++ b/templates/settings.html.twig
@@ -4,14 +4,16 @@
 
 {% block css %}{{ parent() }}{% endblock %}
 
-{% block js %}{{ parent() }}{% endblock %}
+{% block js %}
+	{{ parent() }}
+{% endblock %}
 
 {% block body %}
 	<div class="row">
 		<div class="col-lg-2 col-md-4 d-none d-md-block">
-			<div class="card bg-dark">
+			<div class="card">
 				<div class="card-body">
-					<nav class="nav flex-column nav-pills nav-gap-y-1">
+					<nav class="nav flex-column nav-pills nav-gap-y-1" role="tablist">
 						<a href="#systemInformation" data-toggle="tab" class="nav-item nav-link has-icon nav-link-faded active"><i class="fas fa-computer" style="width: 20px; height: 20px"></i> System Information</a>
 						<a href="#generalSettings" data-toggle="tab" class="nav-item nav-link has-icon nav-link-faded"><i class="fas fa-sliders-h" style="width: 20px; height: 20px"></i> General Settings</a>
 					</nav>
@@ -20,7 +22,8 @@
 		</div>
 
 		<div class="col-lg-10 col-md-8">
-			<div class="card bg-dark text-white">
+			<div class="card">
+
 				<div class="card-header border-bottom mb-3 d-flex d-md-none">
 					<ul class="nav nav-tabs card-header-tabs" role="tablist">
 						<li class="nav-item">
@@ -33,13 +36,21 @@
 				</div>
 
 				<div class="card-body tab-content">
-
-					<div class="tab-pane active" id="systemInformation">
-						<h4>System Information</h4>
+					<div class="tab-pane active" role="tabpanel" id="systemInformation">
+						<h3>System Information</h3>
 						{% for information in info %}
 							<p><b>{{ information.name }}: </b>{{ information.value }}</p>
 						{% endfor %}
 					</div>
+
+					<div class="tab-pane" role="tabpanel" id="generalSettings">
+						<h3>General Settings</h3>
+						<div>
+							<label for="darkMode" class="fw-bold">Dark Mode: </label>
+							<input class="form-check-inline" id="darkMode" name="darkMode" type="checkbox" />
+						</div>
+					</div>
+
 				</div>
 			</div>
 		</div>
