--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,11 @@
 		<meta charset="UTF-8">
 		<title>CEX Library | {{ title }}</title>
 		{% block css %}
-			<link href="{{ asset('css/bootstrap-dark.min.css') }}" rel="stylesheet" type="text/css" />
+			{% if darkMode == 1 %}
+				<link href="{{ asset('css/bootstrap-dark.min.css') }}" rel="stylesheet" type="text/css" />
+			{% else %}
+				<link href="{{ asset('css/bootstrap-light.min.css') }}" rel="stylesheet" type="text/css" />
+			{% endif %}
 			<link href="{{ asset('css/style.css') }}" rel="stylesheet" type="text/css" />
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		{% endblock %}
