--- a/templates/settings.html.twig
+++ b/templates/settings.html.twig
@@ -6,6 +6,26 @@
 
 {% block js %}
 	{{ parent() }}
+	<script>
+    function darkMode() {
+      $('.notification').hide();
+      if($('#darkMode').is(':checked')) {
+        $('#darkMode').val('true');
+      } else {
+        $('#darkMode').val('false');
+      }
+      let formData = {darkMode: $('#darkMode').val()}
+      $.ajax({
+               type: "POST",
+               url: "/settings/darkMode/post",
+               data: formData,
+               dataType: "json",
+               success: function() {
+                 location.reload();
+               }
+             });
+    }
+	</script>
 {% endblock %}
 
 {% block body %}
@@ -14,8 +34,8 @@
 			<div class="card">
 				<div class="card-body">
 					<nav class="nav flex-column nav-pills nav-gap-y-1" role="tablist">
-						<a href="#systemInformation" data-toggle="tab" class="nav-item nav-link has-icon nav-link-faded active"><i class="fas fa-computer" style="width: 20px; height: 20px"></i> System Information</a>
-						<a href="#generalSettings" data-toggle="tab" class="nav-item nav-link has-icon nav-link-faded"><i class="fas fa-sliders-h" style="width: 20px; height: 20px"></i> General Settings</a>
+						<a href="#generalSettings" data-toggle="tab" class="nav-item nav-link has-icon nav-link-faded active"><i class="fas fa-sliders-h" style="width: 20px; height: 20px"></i> General Settings</a>
+						<a href="#systemInformation" data-toggle="tab" class="nav-item nav-link has-icon nav-link-faded"><i class="fas fa-computer" style="width: 20px; height: 20px"></i> System Information</a>
 					</nav>
 				</div>
 			</div>
@@ -27,30 +47,29 @@
 				<div class="card-header border-bottom mb-3 d-flex d-md-none">
 					<ul class="nav nav-tabs card-header-tabs" role="tablist">
 						<li class="nav-item">
-							<a href="#systemInformation" data-toggle="tab" class="nav-link has-icon active"><i class="fas fa-computer"></i></a>
+							<a href="#generalSettings" data-toggle="tab" class="nav-link has-icon"><i class="fas fa-sliders-h"></i></a>
 						</li>
 						<li class="nav-item">
-							<a href="#generalSettings" data-toggle="tab" class="nav-link has-icon"><i class="fas fa-sliders-h"></i></a>
+							<a href="#systemInformation" data-toggle="tab" class="nav-link has-icon active"><i class="fas fa-computer"></i></a>
 						</li>
 					</ul>
 				</div>
 
 				<div class="card-body tab-content">
-					<div class="tab-pane active" role="tabpanel" id="systemInformation">
+					<div class="tab-pane active" role="tabpanel" id="generalSettings">
+						<h3>General Settings</h3>
+						<div>
+							<label for="darkMode" class="fw-bold">Dark Mode: </label>
+							<input onchange="darkMode()" id="darkMode" name="darkMode" type="checkbox" class="form-check-inline" id="darkSwitch" {% if darkMode == true%}value="true" checked{% else %}value="false"{% endif%} />
+						</div>
+					</div>
+
+					<div class="tab-pane" role="tabpanel" id="systemInformation">
 						<h3>System Information</h3>
 						{% for information in info %}
 							<p><b>{{ information.name }}: </b>{{ information.value }}</p>
 						{% endfor %}
 					</div>
-
-					<div class="tab-pane" role="tabpanel" id="generalSettings">
-						<h3>General Settings</h3>
-						<div>
-							<label for="darkMode" class="fw-bold">Dark Mode: </label>
-							<input class="form-check-inline" id="darkMode" name="darkMode" type="checkbox" />
-						</div>
-					</div>
-
 				</div>
 			</div>
 		</div>
